--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container land">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-8">
       <div class="blog-post">
         <div class="col-md-5">
          <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
@@ -85,10 +85,19 @@
        </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
       <h4>Resources</h4>
       <div class="sidebar-module sidebar-module-inset">
         <ul>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
           <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
           <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
           <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
