--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -108,23 +108,69 @@
           <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
         </ul>
       </div>
-      <div class="sidebar-module">
+
         <h4>Past Events</h4>
-        <ol class="list-unstyled">
-          <li><a href="#">March 2014</a></li>
-          <li><a href="#">February 2014</a></li>
-          <li><a href="#">January 2014</a></li>
-          <li><a href="#">December 2013</a></li>
-          <li><a href="#">November 2013</a></li>
-          <li><a href="#">October 2013</a></li>
-          <li><a href="#">September 2013</a></li>
-          <li><a href="#">August 2013</a></li>
-          <li><a href="#">July 2013</a></li>
-          <li><a href="#">June 2013</a></li>
-          <li><a href="#">May 2013</a></li>
-          <li><a href="#">April 2013</a></li>
-        </ol>
-      </div>
+
+
+     			<button class="accordion" id="what">Τι κάνουμε</button>
+     			<div class="panel">
+     				<p>Ο ευρύς στόχος του OK!Thess είναι η ουσιώδης συμβολή στην δημιουργία ενός οικοσυστήματος καινοτομίας. Ένα τέτοιο οικοσύστημα θα περιλάμβανε αφ’ ενός όλους όσους είναι σε θέση και επιθυμούν να συμβάλλουν στην ανάπτυξη της καινοτομίας στην πόλη και αφ’ ετέρου όλες τις λειτουργίες που είναι απαραίτητες για την υγιή μεγέθυνση του οικοσυστήματος του ίδιου. Ένα τέτοιο οικοσύστημα θα περιλάμβανε τα εξής:</p>
+     					<ul>
+     						<li><strong>Πηγές ανθρώπων με υποσχόμενες καινοτόμες ιδέες:</strong> Τέτοιες πηγές είναι τα πανεπιστήμια και τα ΤΕΙ αλλά και η κοινωνία γενικότερα καθώς λαμπρές ιδέες μπορούν να ξεκινήσουν από οπουδήποτε.</li>
+     						<li><strong>Διαδικασίες που συμβάλλουν στην μετατροπή πρωτόλειων ιδεών σε βιώσιμες προτάσεις:</strong> Αυτές μπορεί να περιλαμβάνουν συμβουλευτική, διαλέξεις, διαγωνισμούς, κατάρτιση, συναναστροφές και δημιουργία καινοτόμων κοινοτήτων και ό,τι άλλο συμβάλλει με αυτό τον τρόπο.</li>
+     						<li><strong>Υποδομές:</strong> Αυτές θα στηρίξουν διαδικασίες όπως αυτές που περιγράφηκαν αλλά και θα δώσουν την δυνατότητα σε νεοφυείς οντότητες να «δοκιμαστούν» και πολλές από αυτές να «επιζήσουν» πριν καταλήξουν, έτοιμες, σε κάποιον από τους προορισμούς του οικοσυστήματος.</li>
+     						<li><strong>Προορισμούς των δοκιμασμένων και υποσχόμενων νεοφυών οντοτήτων:</strong> Αυτοί οι προορισμοί περιλαμβάνουν κατά κύριο λόγο το πάντρεμα των καλυτέρων ιδεών με επενδυτικά κεφάλαια που θα αναπτυχθούν παραπάνω σε τεχνολογικά πάρκα, αλλά και αυτοτελώς.</li>
+     					</ul>
+     			<br>
+     				<p>Το οικοσύστημα αυτό θα είναι ανοικτό σε όλους τους επιχειρηματικούς και εκπαιδευτικούς φορείς της πόλης για να εγκολπώσει όλες τις προσπάθειες που κινούνται στην κατεύθυνση της καινοτομίας και της επιχειρηματικότητας. Για την στήριξη του οικοσυστήματος, θα δημιουργηθούν συνθήκες χώρου και υπηρεσιών που να επιτρέπουν σε έναν αριθμό οντοτήτων με νέες και δυνητικά εμπορεύσιμες επιχειρηματικές ιδέες – είτε προϊόντα έρευνας είτε όχι – να τις επεξεργαστούν για ένα διάστημα απαλλαγμένες από άλλα βάρη στην προσπάθεια τους.</p>
+     			<br>
+     				<p><strong>Η προσπάθεια υλοποίησης του στόχου ξεκινάει με το άνοιγμα της προ-θερμοκοιτίδας του OK!Thess, η οποία προσφέρει τις παρακάτω υπηρεσίες:</strong></p>
+     					<ul>
+     						<li>Διάθεση χώρου που να μπορεί να συναντιέται και να συνεργάζεται μια ομάδα έως 5 ατόμων.</li>
+     						<li>Πρόσβαση σε δίκτυο Wi-Fi υψηλής ταχύτητας.</li>
+     						<li>Συμμετοχή σε σεμινάρια και διαλέξεις σχετικά με την καινοτομία στον χώρο του ΟΚ!Thess.</li>
+     						<li>Καθημερινή δυνατότητα καθοδήγησης από έναν coach εξειδικευμένο σε θέματα startups.</li>
+     						<li>Στήριξη από έναν μέντορα του οικονομικού χώρου όπου δραστηριοποιείται η startup ή δυνητική startup.</li>
+     						<li>Χώρο κοινωνικής συναναστροφής με άλλες ομάδες που συστεγάζονται.</li>
+     						<li>Ευκαιρίες συνάντησης με δυνητικούς επενδυτές.</li>
+     					</ul>
+     			</div>
+     			<button class="accordion" id="how">Πως το κάνουμε</button>
+     			<div class="panel">
+     				<h3><strong>Σύνδεση ομάδων με Μέντορες</strong></h3>
+     				<p>Σε ετήσια βάση προβλέπεται η διεξαγωγή 30 συναντήσεων τέτοιου είδους οι οποίες στοχεύουν στην υιοθέτηση νεοφυών οµάδων από µέντορες. Ως Mentoring ορίζεται η συχνή διάδραση των ομάδων του οικοσυστήματος με ανθρώπους που φέρουν εξειδικευμένη εμπειρία της αγοράς στόχου της ομάδας που έχουν αναλάβει. Μέσα απο την συναναστροφή με τους μέντορες, η ομάδα ωριμάζει και ιδανικά αποφεύγει καταστάσεις που καθυστερούνε την επίτευξη στόχων και οροσήμων κατά την επιχειρηματική της ανάπτυξη.</p>
+     			<br>
+     				<h3><strong>Συνεργατικές τεχνικές συναντήσεις</strong></h3>
+     				<p>Το OK!Thess θα απευθυνθεί στο ευρύτερο οικοσύστηµα της περιοχής και θα συνεργαστεί µε φορείς εξειδικευµένης θεµατολογίας ή / και γεωγραφικής εµβέλειας. Με αυτό το σκεπτικό, προβλέπεται η συνδιοργάνωση διαφόρων τύπων εκδηλώσεων (boot camps, speed dating events κλπ). Προβλέπεται η συνδιοργάνωση 6 εκδηλώσεων σε ετήσια βάση.</p>
+     			<br>
+     				<h3><strong>Εκδηλώσεις ποικίλου χαρακτήρα</strong></h3>
+     				<p>Το όλο οικοσύστηµα καινοτοµίας που δηµιουργείται µε επίκεντρο το OK!Thess πλαισιώνεται από σειρά εκδηλώσεων: επιστηµονικού χαρακτήρα µε προσκεκληµένους διακεκριµένους οµιλητές διεθνούς φήµης, validation events διαδραστικού χαρακτήρα εκδηλώσεις όπου το κοινό συµµετέχει δίνοντας πολύτιµη ανάδραση στους διοργανωτές, demo days εκδηλώσεις που δίνουν την ευκαιρία σε νεοφυείς οµάδες να προσεγγίσουν επενδυτές. Συνολικά προβλέπεται η διοργάνωση 10 εκδηλώσεων ποικίλου χαρακτήρα σε ετήσια βάση.</p>
+     			</div>
+     			<button class="accordion" id="participate">Πως συμμετέχω</button>
+     			<div class="panel">
+     				<p>Γίνονται δεκτές προτάσεις από άτομα ή ομάδες με καινοτόμες ιδέες, ανεξάρτητα του βαθμού ωρίμανσης, που θα ήθελαν να ωφεληθούν από τις υπηρεσίες της προ-θερμοκοιτίδας του OK!Thess ώστε να στήσουν μια επιχείρηση (startup) ή να ενισχύσουν μια startup που έχουν ήδη στήσει.</p>
+     			<br>
+     				<p>Οι αιτήσεις συμμετοχής αξιολογούνται από τετραμελή επιτροπή η οποία αν χρειαστεί θα ζητήσει την αρωγή εμπειρογνωμόνων στον τομέα του αιτούντος. Τα κριτήρια στα οποία θα βασιστεί η απόφαση της επιτροπής κατά σειρά σπουδαιότητας είναι:</p>
+     			<br>
+     				<ul>
+     					<li><strong>Η επιχειρηματική ιδέα -</strong> Οι προοπτικές της ιδέας, άμεσα ή έμμεσα, να δημιουργήσει θέσεις εργασίας σε περίπτωση επιτυχίας, η εμπορευσιμότητα της ιδέας, η πρωτοτυπία / καινοτομία της επιχειρηματικής ιδέας, το πόσο εφικτή είναι η υλοποίησή της – λαμβάνοντας υπ' όψιν τα χαρακτηριστικά της αγοράς (μεγάλη/μικρή) και του ανταγωνισμού (μεγάλος/μικρός), η ανάγκη της αγοράς στην οποία ανταποκρίνεται, ο στόχος στην αγορά, η προστιθέμενη αξία, η σαφήνεια και ο βαθμός ωριμότητας της ιδέας</li>
+     					<li><strong>Τα προσόντα της ομάδας -</strong> Το επίπεδο εκπαίδευσης και η συνάφεια των σπουδών με την επιχειρηματική ιδέα, η προηγούμενη επιχειρηματική εμπειρία, η συνάφεια της επιχειρηματικής εμπειρίας με την επιχειρηματική ιδέα, η εμπειρία σε έρευνα και ανάπτυξη, η δομή της ομάδας</li>
+     					<li><strong>Το επιχειρηματικό σχέδιο</strong></li>
+     				</ul>
+     			<br>
+     				<p>Όσον αφορά το επιχειρηματικό σχέδιο, δεν είναι υποχρεωτικό να κατατεθεί στην αίτηση και η απουσία του δεν θα επηρεάσει αρνητικά την αίτηση, καθώς ένας από τους στόχους της εισαγωγής στο OK!Thess είναι η δημιουργία του. Εάν όμως κατατεθεί μπορεί να επηρεάσει θετικά.</p>
+     			<br>
+     				<p>Η αποδοχή κάθε ομάδας γίνεται για ένα χρονικό διάστημα που προσδιορίζεται από την επιτροπή αξιολόγησης και εξαρτάται από τα χαρακτηριστικά της κάθε πρότασης. Όλες οι ομάδες που γίνανε δεκτές αξιολογούνται για την πρόοδο τους κάθε τρεις μήνες. Σε περίπτωση που αυτή η αξιολόγηση δείχνει πως οι στόχοι της ομάδας δεν είναι επιτεύξιμοι τότε η συμφωνία συμμετοχής στο ΟΚ!Thess διακόπτεται ώστε οι διαθέσιμοι πόροι να διατεθούν σε νέες ομάδες.</p>
+     			<br>
+     				<p>Κάθε ομάδα που γίνεται δεκτή στο ΟΚ!Τhess, πληρώνει προκαταβολικά €150 για κάθε τριμηνία και για τις υπηρεσίες που αναφέρονται παραπάνω. Άλλες υπηρεσίες, όπως εξειδικευμένη κατάρτιση μπορεί να έχει πρόσθετη χρέωση.</p>
+     			</div>
+     			<button class="accordion" id="coworking">Συνεργατικός χώρος</button>
+     				<div class="panel">
+     					<p>Ο χώρος παρέχει ένα σύγχρονο εργασιακό περιβάλλον με μεγάλες δυνατότητες λειτουργικής διαμόρφωσης ώστε να προσαρμόζεται στις εκάστοτε απαιτήσεις.</p>
+     					<p>Παράλληλα παρέχονται όλες οι σύγχρονες υποδοµές (δίκτυο υψηλών ταχυτήτων, τραπέζια εργασίας, χώροι συναντήσεων - συνεργασίας, χώροι εστίασης έως και αναψυχής κλπ) σε έναν χώρο µε minimal αισθητική που µπορεί εύκολα να µεταµορφώνεται ανάλογα µε τις απαιτήσεις και τις ιδιαιτερότητες της εκάστοτε δράσης που υλοποιείται.</p>
+     				</div>
+
+           
       <div class="sidebar-module">
         <h4>Elsewhere</h4>
         <ol class="list-unstyled">
@@ -136,5 +182,26 @@
     </div>
   </div>
 </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+acc[i].onclick = function() {
+this.classList.toggle("active");
+var panel = this.nextElementSibling;
+if (panel.style.maxHeight){
+panel.style.maxHeight = null;
+button.style.marginTop = "35px";
+} else {
+panel.style.maxHeight = panel.scrollHeight + "px";
+button.style.marginTop = "35px";
+}
+}
+}
+</script>
+
 
 {% endblock %}
