--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -66,7 +66,7 @@
                         <li><a tabindex="-1" href="{% url 'main:about' %}#collapse3">Coworking space</a></li>
                    </ul>
                 </li>
-                <li id="blue"><a href="{% url 'main:program' %}">Program</a></li>
+                <li id="blue"><a href="{% url 'main:program_teams' %}">Program</a></li>
                 <li id="yell"><a href="{% url 'main:events' %}">Events</a></li>
                 <li id="blue"><a href="{% url 'main:blog' %}">Blog</a></li>
                 <li id="yell"><a href="{% url 'main:contact' %}">Contact</a></li>
