commit in order to pull :)

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -6,11 +6,11 @@
 <div class="container-fluid land">
   <div class="row">
     <div class="col-md-9">
-    <div class="media">
-      <div class="media-left">
-        <img src="https://unsplash.it/200/?random" class="media-object">
+     <div class="events">
+      <div class="col-md-3">
+       <img src="https://unsplash.it/200/?random" class="media-object">
       </div>
-      <div class="media-body">
+      <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
@@ -22,13 +22,31 @@
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="media">
-      <div class="media-left">
-        <img src="https://unsplash.it/200/?random" class="media-object">
+     </div>
+     <hr>
+     <div class="events">
+       <div class="col-md-3">
+         <img src="https://unsplash.it/200/?random" class="media-object">
+       </div>
+       <div class="col-md-9">
+         <div class="event-data">
+           <p class="event-time">12-12-2012</p>
+           <p class="event-day">When: Friday 22 Sept</p>
+         </div>
+         <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+         <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
+         <div class="event-data">
+           <p class="event-time">12-12-2012</p>
+           <p class="event-day">When: Friday 22 Sept</p>
+         </div>
+       </div>
       </div>
-      <div class="media-body">
+     <hr>
+     <div class="events">
+      <div class="col-md-3">
+       <img src="https://unsplash.it/200/?random" class="media-object">
+      </div>
+      <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
@@ -40,13 +58,13 @@
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="media">
-      <div class="media-left">
-        <img src="https://unsplash.it/200/?random" class="media-object">
+     </div>
+     <hr>
+     <div class="events">
+      <div class="col-md-3">
+       <img src="https://unsplash.it/200/?random" class="media-object">
       </div>
-      <div class="media-body">
+      <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
@@ -58,13 +76,13 @@
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="media">
-      <div class="media-left">
-        <img src="https://unsplash.it/200/?random" class="media-object">
+     </div>
+     <hr>
+     <div class="events">
+      <div class="col-md-3">
+       <img src="https://unsplash.it/200/?random" class="media-object">
       </div>
-      <div class="media-body">
+      <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
@@ -76,13 +94,13 @@
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="media">
-      <div class="media-left">
-        <img src="https://unsplash.it/200/?random" class="media-object">
+     </div>
+     <hr>
+     <div class="events">
+      <div class="col-md-3">
+       <img src="https://unsplash.it/200/?random" class="media-object">
       </div>
-      <div class="media-body">
+      <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
@@ -94,29 +112,11 @@
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="media">
-      <div class="media-left">
-        <img src="https://unsplash.it/200/?random" class="media-object">
-      </div>
-      <div class="media-body">
-        <div class="event-data">
-          <p class="event-time">12-12-2012</p>
-          <p class="event-day">When: Friday 22 Sept</p>
-        </div>
-        <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
-        <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
-        <div class="event-data">
-          <p class="event-time">12-12-2012</p>
-          <p class="event-day">When: Friday 22 Sept</p>
-        </div>
-      </div>
-    </div>
-    <hr>
+     </div>
+     <hr>
     </div>
     <div class="col-md-3">
-      <h4>Meetups</h4>
+      <h3>Hosted Meetups</h3>
       <div class="sidebar-module sidebar-module-inset">
         <ul>
           <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Pythess</a></li>
