--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -58,6 +58,7 @@ h3{
 	background: -o-linear-gradient(top, #231F20, #231F20);
 	background-image: -ms-linear-gradient(top, #231F20 0%, #231F20 100%);
 	padding: 10px 20px;
+	margin-top: 10px;
 	display: inline-block;
 	-webkit-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 1px 0;
 	-moz-box-shadow: rgba(255,255,255,0.4) 0 0px 0, inset rgba(255,255,255,0.4) 0 1px 0;
@@ -519,48 +520,42 @@ h6.blog-post-meta {
 
 /* Events */
 
-.media {
-	margin-top: 10px;
+.events{
+	margin: 10px 0px;
 }
 
-.media:first-child {
-	margin-top: 10px;
-}
-
-.media-body {
-	font-size: 14px;
-	font-weight: 300;
+.events p{
+	font-size: 12px;
 }
 
  .event-teaser{
-	 margin-left: 5%;
+	 margin-left: 7%;
  }
 
 .event-data{
-	display: -webkit-flex; /* Safari */
-	display: flex;
-}
-
-.event-data p {
-	-webkit-flex: 1;  /* Safari 6.1+ */
-  -ms-flex: 1;  /* IE 10 */
-  flex: 1;
-	width: auto;
+	-moz-column-count: 2;
+    -moz-column-gap: 50%;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 50%;
+    column-count: 2;
+    column-gap: 100%;
 }
 
 .event-time {
- float: left;
- background-color: grey;
- padding: 2px 4px;
- font-size: 12px !important;
+ width: max-content;
+ color: white;
+ background-color: black;
+ padding: 1px 4px;
+ font-size: 12px;
  font-weight: 300;
 }
 
 .event-day {
+	width: max-content;
 	float: right;
 	text-align: right;
 	background-color: grey;
-  padding: 2px 4px;
+  padding: 1px 4px;
   font-size: 12px;
   font-weight: 300;
 }
