try to fix event layout

--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -4,18 +4,17 @@
 
 {% block content %}
 <div class="container-fluid land">
-  <div class="row">
     <div class="col-md-9">
      <div class="events">
       <div class="col-md-3">
-       <img src="https://unsplash.it/200/?random" class="media-object">
+       <img src="https://unsplash.it/200/?random">
       </div>
       <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
-        <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+        <h4  >.NET + QA & Testing United. Creating a Test Automation Framework</h4>
         <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
@@ -26,14 +25,14 @@
      <hr>
      <div class="events">
        <div class="col-md-3">
-         <img src="https://unsplash.it/200/?random" class="media-object">
+         <img src="https://unsplash.it/200/?random">
        </div>
        <div class="col-md-9">
          <div class="event-data">
            <p class="event-time">12-12-2012</p>
            <p class="event-day">When: Friday 22 Sept</p>
          </div>
-         <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+         <h4  >.NET + QA & Testing United. Creating a Test Automation Framework</h4>
          <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
          <div class="event-data">
            <p class="event-time">12-12-2012</p>
@@ -44,14 +43,14 @@
      <hr>
      <div class="events">
       <div class="col-md-3">
-       <img src="https://unsplash.it/200/?random" class="media-object">
+       <img src="https://unsplash.it/200/?random"  >
       </div>
       <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
-        <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+        <h4  >.NET + QA & Testing United. Creating a Test Automation Framework</h4>
         <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
@@ -62,14 +61,14 @@
      <hr>
      <div class="events">
       <div class="col-md-3">
-       <img src="https://unsplash.it/200/?random" class="media-object">
+       <img src="https://unsplash.it/200/?random"  >
       </div>
       <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
-        <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+        <h4  >.NET + QA & Testing United. Creating a Test Automation Framework</h4>
         <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
@@ -80,14 +79,14 @@
      <hr>
      <div class="events">
       <div class="col-md-3">
-       <img src="https://unsplash.it/200/?random" class="media-object">
+       <img src="https://unsplash.it/200/?random"  >
       </div>
       <div class="col-md-9">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
-        <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+        <h4  >.NET + QA & Testing United. Creating a Test Automation Framework</h4>
         <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
@@ -98,14 +97,14 @@
      <hr>
      <div class="events">
       <div class="col-md-3">
-       <img src="https://unsplash.it/200/?random" class="media-object">
+       <img src="https://unsplash.it/200/?random"  >
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9 event-teaser">
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
           <p class="event-day">When: Friday 22 Sept</p>
         </div>
-        <h4 class="media-heading">.NET + QA & Testing United. Creating a Test Automation Framework</h4>
+        <h4  >.NET + QA & Testing United. Creating a Test Automation Framework</h4>
         <p>What is the purpose of a Test Automation Framework? What challenges does it solve for the development team? Learning how to use a tool like Selenium to create automated tests is not enough to be successful with an automation effort. You also need to know how to build an automation framework that can support creating tests that are not so fragile that they constantly break. This is the real key to success in any automation effort.In this meetup we'll find out how to create a test automation framework using selenium & .NET following the page pattern.</p>
         <div class="event-data">
           <p class="event-time">12-12-2012</p>
@@ -136,7 +135,7 @@
         </ul>
       </div>
 
-        <h4>Past Events</h4>
+        <h3>Past Events</h3>
 
           <h5>2017</h5>
      			<button class="accordion">Winter</button>
@@ -226,7 +225,7 @@
         </ol>
       </div>
     </div>
-  </div>
+
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
