--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -48,6 +48,7 @@ h2{
 
 h3{
 	font-size: 18px;
+	clear: right;
 	font-weight: 500;
 	color: white;
 	background: #231F20;
@@ -520,25 +521,22 @@ h6.blog-post-meta {
 
 /* Events */
 
-.events{
-	margin: 10px 0px;
+.events img{
+	width: 100%;
+	height: 50px;
 }
 
 .events p{
 	font-size: 12px;
 }
 
- .event-teaser{
-	 margin-left: 7%;
- }
-
-.event-data{
+.event-data {
 	-moz-column-count: 2;
     -moz-column-gap: 50%;
     -webkit-column-count: 2;
     -webkit-column-gap: 50%;
     column-count: 2;
-    column-gap: 100%;
+    column-gap: 50%;
 }
 
 .event-time {
